# text2cypher

./: .gitignore  README.md  create_graph.py  docker-compose.yml  download_dataset.py  pyproject.toml  query_graph.py  query_graph_compressed.py  query_graph_ddl_schema.py  utils.py
baml_src/: clients.baml  text2cypher.baml
etl/: copy.cypher  schema.cypher
eval_data/: README.md  questions_and_cypher.txt
results/: google_gemini_2.0_flash_json.txt  google_gemini_2.0_flash_json_full.txt  google_gemini_2.0_flash_xml.txt  google_gemini_2.0_flash_xml_full.txt  google_gemini_2.0_flash_yaml.txt  google_gemini_2.0_flash_yaml_full.txt  google_gemini_2.5_flash_json.txt  google_gemini_2.5_flash_json_full.txt  google_gemini_2.5_flash_xml.txt  google_gemini_2.5_flash_xml_full.txt  google_gemini_2.5_flash_yaml.txt  google_gemini_2.5_flash_yaml_full.txt  mistralai_devstral_medium_json.txt  mistralai_devstral_medium_json_full.txt  mistralai_devstral_medium_xml.txt  mistralai_devstral_medium_xml_full.txt  mistralai_devstral_medium_yaml.txt  mistralai_devstral_medium_yaml_full.txt  openai_gpt_4.1_json.txt  openai_gpt_4.1_json_full.txt  openai_gpt_4.1_nano_json.txt  openai_gpt_4.1_nano_json_full.txt  openai_gpt_4.1_nano_xml.txt  openai_gpt_4.1_nano_xml_full.txt  openai_gpt_4.1_nano_yaml.txt  openai_gpt_4.1_nano_yaml_full.txt  openai_gpt_4.1_xml.txt  openai_gpt_4.1_xml_full.txt  openai_gpt_4.1_yaml.txt  openai_gpt_4.1_yaml_full.txt  plot.py
tests/: test_data.py  test_text2cypher_compressed.py  test_text2cypher_ddl_schema.py  test_text2cypher_json.py  test_text2cypher_json_full.py  (+4 more)
